--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>wealthbar-vue-starter</title>
+    <link rel="shortcut icon" href="/favicon.ico" />
   </head>
   <body>
     <div id="app"></div>
